# Databricks_different_scenarios

Databricks/Databricks_project/: README.md  databricks.yml  pyproject.toml
Databricks/Databricks_project/resources/Jobs/: Dynamic_file_ingestion_job.yml  Sales_data_medallion_layer_load_job.yml
Databricks/Databricks_project/resources/Pipelines/: End_to_End_DLT_sales_bronze_piepline.yml  End_to_End_DLT_sales_gold_pipeline.yml  End_to_End_DLT_sales_silver_pipeline.yml  adventure_file_dlt_pipeline.yml
Databricks/Databricks_project/src/Databricks_project/Dlt_pipeline_root_folder/Core_components_of_DLT_pipeline/: README.md
Databricks/Databricks_project/src/Databricks_project/Dlt_pipeline_root_folder/End_to_End_DLT_sales_bronze_piepline/: README.md
Databricks/Databricks_project/src/Databricks_project/Dlt_pipeline_root_folder/End_to_End_DLT_sales_gold_pipeline/: README.md
Databricks/Databricks_project/src/Databricks_project/Dlt_pipeline_root_folder/End_to_End_DLT_sales_silver_pipeline/: README.md
Databricks/Databricks_project/src/Databricks_project/Dlt_pipeline_root_folder/New Pipeline 2025-10-10 12:21-(1)/: Adventure_sales_rule_dlt_pip_notebook.ipynb  README.md
Databricks/Databricks_project/src/Databricks_project/Notebooks/Adventure_sales_notebooks/: Adventure_autoloader_ingestion.ipynb.ipynb  optimizing_delta_files.ipynb.ipynb
Databricks/Databricks_project/src/SQL_warehouse_queries/: Order_table_insertion_Script.dbquery.ipynb  Sales_data_insertion_scripts.dbquery.ipynb
Databricks/Databricks_project/tests/: main_test.py
(+30 files in other folders)
